# todo-trollo

./: README.md  docker-compose.yaml
back/: .dockerignore  Cargo.toml  Dockerfile
back/migrations/1.users/: up.sql
back/migrations/2.groups/: down.sql  up.sql
back/migrations/3.groups_assigned_users/: down.sql  up.sql
back/migrations/4.tasks/: up.sql
back/src/: main.rs  schema.rs
back/src/errors/: auth_errors.rs  database_errors.rs  mod.rs
back/src/middlewares/: mod.rs  validate_jwt.rs
back/src/models/: group.rs  mod.rs  taks.rs  user.rs
back/src/repository/: sql.rs
back/src/route_handlers/: auth.rs  groups.rs  mod.rs  tasks.rs
back/src/route_handlers/auth/: get.rs  login.rs  post.rs  register.rs
back/src/route_handlers/groups/: create.rs  get.rs  post.rs
back/src/route_handlers/tasks/: get.rs  patch.rs  post.rs
back/src/route_handlers/users_handle/: mod.rs
back/src/route_handlers/users_handle/get/: get_single_user.rs  get_users_for_invite.rs  mod.rs
back/src/route_handlers/users_handle/update/: mod.rs
back/src/tests/: auth.rs
back/src/websockets/: mod.rs  server.rs
front/: .dockerignore  Dockerfile  package-lock.json  package.json
front/src/: App.jsx  index.scss  main.jsx
front/src/pages/Dashboard/: dashboard.jsx  index.jsx
front/src/pages/Login/: index.jsx  login.jsx
front/src/pages/Logout/: logout.jsx
front/src/pages/Protector/: protector.jsx
front/src/pages/Register/: index.jsx  register.jsx
front/src/redux/: store.js  store.jsx
front/src/redux/reducers/: groups.js  groups.jsx  tasks.js  tasks.jsx  user.js  user.jsx
front/src/shared/Group/: group.jsx  inviteUsers.jsx
front/src/shared/Navbar/: index.jsx  navbar.jsx
front/src/shared/TasksList/: task.jsx  taskList.jsx
front/src/shared/Wrapper/: Wrapper.jsx
