[package]
name = "back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4.3.1"
uuid= { version="1.3.2", features=["v4"] }
serde = {version="1.0.160", features=["derive"]}
env_logger="0.10.0"
log="0.4.17"
